Fixed issue with white space at bottom of footer

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -143,6 +143,7 @@ html {
 
 #footerText {
     margin-top: 2%;
+    margin-bottom: 0;
     padding-top: 2%;
     color: white;
     text-align: center;
